# back/api/src/app/Http/Controllers/Auth/RegisterController.php
@@ -52,12 +52,34 @@ use OpenApi\Attributes as OAT;
     operationId: 'api.auth.register',
     requestBody: new OAT\RequestBody(
         required: true,
+        content: new OAT\JsonContent(ref: '#/components/schemas/RegisterRequest')
     ),
     responses: [
         new OAT\Response(
             response: 200,
             description: 'Ok',
-        )]
+            content: new OAT\JsonContent(ref: '#/components/schemas/SuccessLoginResource')
+        ),
+        new OAT\Response(
+            response: 422,
+            description: 'password confirmation',
+            content: new OAT\JsonContent(
+                properties: [
+                    new OAT\Property(
+                        property: 'status',
+                        type: 'string',
+                        example: 'error'
+                    ),
+                    new OAT\Property(
+                        property: 'message',
+                        type: 'string',
+                        example: 'password confirmation.'
+                    ),
+                ]
+            )
+        ),
+
+        ]
 )]
 class RegisterController extends Controller
 {
@@ -68,8 +90,14 @@ class RegisterController extends Controller
     {
     }
 
-    public function __invoke(RegisterRequest $request): JsonResponse
+    public function __invoke(RegisterRequest $request): mixed
     {
+        if ($request->input('password') != $request->input('password_confirmation')){
+            return response()->json([
+                'status' => 'error',
+                'message' => 'password confirmation',
+            ], 422);
+        }
         $this->userService->create([
             'name' => $request->input('name'),
             'email' => $request->input('email'),
