# back/api/src/app/Http/Requests/Auth/RegisterRequest.php
@@ -2,40 +2,48 @@
 
 namespace App\Http\Requests\Auth;
 
-use Illuminate\Auth\Events\Lockout;
 use Illuminate\Foundation\Http\FormRequest;
-use Illuminate\Support\Facades\Auth;
-use Illuminate\Support\Facades\RateLimiter;
-use Illuminate\Support\Str;
 use Illuminate\Validation\Rule;
-use Illuminate\Validation\ValidationException;
 
+use OpenApi\Attributes as OAT;
+
+#[OAT\Schema(
+    schema: 'RegisterRequest',
+    required: ['name', 'email', 'password', 'password_confirmation'],
+    properties: [
+        new OAT\Property(
+            property: 'name',
+            type: 'string',
+            example: 'John Doe'
+        ),
+        new OAT\Property(
+            property: 'email',
+            type: 'string',
+            format: 'email',
+            example: 'john@example.com'
+        ),
+        new OAT\Property(
+            property: 'password',
+            type: 'string',
+            example: '123456'
+        ),
+        new OAT\Property(
+            property: 'password_confirmation',
+            type: 'string',
+            example: '123456'
+        ),
+    ]
+)]
 class RegisterRequest extends FormRequest
 {
-    /**
-     * Determine if the user is authorized to make this request.
-     */
-    public function authorize(): bool
-    {
-        return true;
-    }
 
-    /**
-     * Get the validation rules that apply to the request.
-     *
-     * @return array<string, \Illuminate\Contracts\Validation\Rule|array|string>
-     */
     public function rules(): array
     {
         return [
             'name' => ['required', 'string'],
-            'email' => [
-                'required',
-                'string',
-                'email',
-                Rule::unique('users', 'email')->ignore(null),
-            ],
+            'email' => ['required', 'string', 'email', Rule::unique('users', 'email')->ignore(null),],
             'password' => ['required', 'string'],
-        ];
+            'password_confirmation' => ['required', 'string'],
+            ];
     }
 }
