# back/api/src/app/Services/JwtService.php
@@ -2,8 +2,10 @@
 
 namespace App\Services;
 
+use App\Http\Resources\Auth\SuccessLoginResource;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Support\Facades\Auth;
+use OpenApi\Attributes as OAT;
 
 class JwtService
 {
@@ -24,13 +26,23 @@ class JwtService
         }
 
         $user = Auth::guard('api')->user();
-        return response()->json([
+        return new SuccessLoginResource(
+            [
             'status' => 'success',
             'user' => $user,
             'authorisation' => [
                 'token' => $token,
                 'type' => 'bearer',
+                ]
             ]
-        ]);
+        );
+//        return response()->json([
+//            'status' => 'success',
+//            'user' => $user,
+//            'authorisation' => [
+//                'token' => $token,
+//                'type' => 'bearer',
+//            ]
+//        ]);
     }
 }
